--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "react-toastify": "^10.0.5",
     "swr": "^2.2.5"
   },
   "devDependencies": {
