--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@libsql/client": "^0.6.2",
     "@salable/node-sdk": "^3.3.0",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.3",
+    "react-hook-form": "^7.51.5",
     "react-toastify": "^10.0.5",
     "swr": "^2.2.5",
     "usehooks-ts": "^3.1.0"
