--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@libsql/client": "^0.6.2",
     "@salable/node-sdk": "^3.3.0",
+    "iron-session": "^8.0.2",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
