--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 # misc
 .DS_Store
 *.pem
+.idea
 
 # debug
 npm-debug.log*
@@ -38,3 +39,4 @@ next-env.d.ts
 .env
 local.db
 dump.sql
+usage-demo-local.db
