--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+TURSO_DATABASE_URL=
+TURSO_AUTH_TOKEN=
 SALABLE_API_KEY=
-SALABLE_API_BASE_URL=
-SUBSCRIPTION_UUID=
+SESSION_COOKIE_NAME=
+SESSION_COOKIE_PASSWORD=
+NEXT_PUBLIC_APP_BASE_URL=
+NEXT_PUBLIC_SALABLE_API_BASE_URL=
+NEXT_PUBLIC_SALABLE_API_KEY_PLANS_READ=
+NEXT_PUBLIC_PRODUCT_UUID=
+NEXT_PUBLIC_SALABLE_PLAN_UUID=
+NEXT_PUBLIC_SALABLE_PRO_PLAN_UUID=
