--- a/package.json
+++ b/package.json
@@ -4,43 +4,38 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@libsql/client": "^0.6.2",
-    "@salable/node-sdk": "^3.3.0",
+    "@libsql/client": "0.6.2",
+    "@prisma/adapter-libsql": "^5.22.0",
+    "@prisma/client": "^5.22.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
-    "drizzle-kit": "^0.23.0",
-    "drizzle-orm": "^0.32.0",
     "iron-session": "^8.0.2",
-    "next": "14.2.1",
+    "next": "15.0.3",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-toastify": "^10.0.5",
-    "swr": "^2.2.5",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.5.5",
+    "@eslint/js": "^9.15.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^9.15.0",
+    "eslint-config-next": "15.0.3",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  },
-  "dockerfile": {
-    "secrets": [
-      "DATABASE_URL",
-      "SALABLE_API_KEY"
-    ]
+    "typescript": "^5",
+    "typescript-eslint": "^8.16.0"
   }
 }
