--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@libsql/client": "0.6.2",
     "@prisma/adapter-libsql": "^5.22.0",
+    "@prisma/adapter-pg": "^6.2.1",
     "@prisma/client": "^5.22.0",
+    "@types/pg": "^8.11.10",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "iron-session": "^8.0.2",
     "next": "15.0.3",
+    "pg": "^8.13.1",
     "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
