--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
-TURSO_DATABASE_URL=
-TURSO_AUTH_TOKEN=
+DATABASE_URL=postgresql://admin:password@localhost:5432/demo-usage-db
+SESSION_COOKIE_NAME='salable-session-usage'
+SESSION_COOKIE_PASSWORD='Q2cHasU797hca8iQ908vsLTdeXwK3BdY'
+NEXT_PUBLIC_APP_BASE_URL='http://localhost:3000'
 SALABLE_API_KEY=
-SESSION_COOKIE_NAME=
-SESSION_COOKIE_PASSWORD=
-NEXT_PUBLIC_APP_BASE_URL=
-NEXT_PUBLIC_SALABLE_API_BASE_URL=
-NEXT_PUBLIC_SALABLE_API_KEY_PLANS_READ=
 NEXT_PUBLIC_PRODUCT_UUID=
 NEXT_PUBLIC_SALABLE_PLAN_UUID=
+NEXT_PUBLIC_SALABLE_PRO_PLAN_UUID=
