--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@prisma/adapter-libsql": "^5.22.0",
     "@prisma/adapter-pg": "^6.2.1",
     "@prisma/client": "^5.22.0",
-    "@salable/node-sdk": "^4.0.0-beta.8",
+    "@salable/node-sdk": "^4.0.0",
     "@types/pg": "^8.11.10",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
